[project]
name = "hexlet-hello-world"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "more-itertools>=10.7.0",
]

[dependency-groups]
dev = [
    "hexlet-hello-world",
    "ruff>=0.12.4",
]

[tool.uv.sources]
hexlet-hello-world = { workspace = true }
